Added everything from LolnetLauncher to compare